--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,11 @@
 [package]
 name = "reactivx"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
+authors = ["Zahash <zahash.z@gmail.com>"]
 description = "Thread Safe Reactive Data Structure."
 license = "MIT"
+repository = "https://github.com/zahash/reactivx"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
