change crate name from reactivx to reactivate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "reactivx"
-version = "0.3.2"
+name = "reactivate"
+version = "0.1.0"
 edition = "2021"
 authors = ["Zahash <zahash.z@gmail.com>"]
 description = "Thread Safe Reactive Data Structure."
 license = "MIT"
-repository = "https://github.com/zahash/reactivx"
+repository = "https://github.com/zahash/reactivate"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
