--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "reactivate"
-version = "0.2.7"
+version = "0.2.8"
 edition = "2021"
 authors = ["Zahash <zahash.z@gmail.com>"]
-description = "Thread Safe Reactive Data Structure."
+description = "Thread Safe Reactive Data Structure. Made with ❤️ for 🦀"
 license = "MIT"
 repository = "https://github.com/zahash/reactivate"
 
