--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reactivate"
-version = "0.2.14"
+version = "0.3.0"
 edition = "2021"
 authors = ["Zahash <zahash.z@gmail.com>"]
 description = "Thread Safe Reactive Data Structure. Made with ❤️ for 🦀"
@@ -8,4 +8,8 @@ license = "MIT"
 repository = "https://github.com/zahash/reactivate"
 
 [dependencies]
-paste = { version = "1" }
+paste = "1"
+rayon = { version = "1", optional = true }
+
+[features]
+parallel = ["dep:rayon"]
