--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "reactivate"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 authors = ["Zahash <zahash.z@gmail.com>"]
 description = "Thread Safe Reactive Data Structure. Made with ❤️ for 🦀"
@@ -12,4 +12,4 @@ paste = "1"
 rayon = { version = "1", optional = true }
 
 [features]
-parallel = ["dep:rayon"]
+parallel-notification = ["dep:rayon"]
